--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,26 @@
-<!doctype html>
-<html lang="en">
+\<!doctype html>
+<html>
 <head>
   <meta charset="utf-8">
-  <title>NgIntro</title>
+  <title>Limetools</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
 </head>
 <body>
-  <app-root></app-root>
+  <div class="container">
+
+      <!-- Static navbar -->
+   
+      <app-root>Loading...</app-root>
+    </div> <!-- /container -->
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
-</html>
+</html> 
